--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/material-top-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "react": "17.0.2",
     "react-native": "0.67.2",
